--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   
 </head>
 
-<body>
+<body onclick="spaceKey()">
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-<script src='https://github.com/pixijs/pixi.js/releases/download/v4.5.1/pixi.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
+<script src='pixi.min.js'></script>
+<script src='jquery.min.js'></script>
 <script src="js/index.js"></script>
 </html>
