--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <title>Doggo Run</title>
   
 </head>
+  
+<style>
+  canvas {
+   margin: 0; 
+  }
+</style>
 
 <body onclick="spaceKey()">
 </body>
