Canvas now full page.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
   
 </head>
 
+<style>
+  * {
+    margin: 0;
+    padding: 0;
+  }
+  
+  html, body {
+    width: 100%;
+    height: 100%;  
+  }
+  
+  canvas {
+    display: block;  
+  }
+</style>
+
 <body onclick="spaceKey()">
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
