--- a/index.html
+++ b/index.html
@@ -1,31 +1,5 @@
 <!DOCTYPE html>
-<html >
-<head>
-  <meta charset="UTF-8">
-  <title>Doggo Run</title>
-  
-</head>
 
-<style>
-  * {
-    margin: 0;
-    padding: 0;
-  }
-  
-  html, body {
-    width: 100%;
-    height: 100%;  
-  }
-  
-  canvas {
-    display: block;  
-  }
-</style>
-
-<body onclick="spaceKey()">
-</body>
-<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-<script src='pixi.min.js'></script>
-<script src='jquery.min.js'></script>
-<script src="js/index.js"></script>
-</html>
+<script>
+  window.location += '/Portfolio';
+</script>
