Added Tic Tac Toe and Material Calculator

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -177,7 +177,7 @@
           <div class="card">
             <img class="card-img-top" src="images/material-calculator.png">
             <div class="card-block">
-              <h2 class="card-text"><a class="card-link" href="https://s.codepen.io/pythoncow/debug/vmWgMQ/xnMabdVxNxNr">Material Calculator</a></h2>
+              <h2 class="card-text"><a class="card-link" href="../Material_Calculator">Material Calculator</a></h2>
               <h3 class="card-text">Calculator made with w3.css.</h3>
             </div>
           </div>
@@ -209,7 +209,7 @@
           <div class="card">
             <img class="card-img-top" src="images/tic-tac-toe.png">
             <div class="card-block">
-              <h2 class="card-text"><a class="card-link" href="https://s.codepen.io/pythoncow/debug/JyoaPx/PBkNWxwmNGXM">Tic Tac Toe</a></h2>
+              <h2 class="card-text"><a class="card-link" href="../Tic_Tac_Toe">Tic Tac Toe</a></h2>
               <h3 class="card-text">A simple unbeatable tic tac toe game made with Pixi.js.</h3>
             </div>
           </div>
